capitalize the website name

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Source+Code+Pro&display=swap" rel="stylesheet">    
 
-    <title>chasing ravens blog</title>
+    <title>Chasing Ravens Blog</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
